objects/vlocity_cmt__CatalogProductRelationship__c.object
<CustomObject>
    <description>Associates a product with a catalog or catalog category.</description>
    <fields>
        <fullName>vlocity_cmt__CatalogId__c</fullName>
        <label>Catalog</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Catalog Product Relationships</relationshipLabel>
        <relationshipName>CatalogProductRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Catalog Product Relationships</relationshipLabel>
        <relationshipName>CatalogProductRelationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catalog Product Relationship</label>
    <nameField>
        <label>Catalog Product Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>